# ebay-crawler

./: .env.example  README.md  pyproject.toml  requirements.txt  scratch.py  test.html  test_playwright.html
ebay_watch_bot/: __init__.py  cli.py  config.py  crawler.py  models.py  notifier.py  parser.py  scratch.py  storage.py
ebay_watch_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_crawler.py  test_notifier.py  test_parser.py
tests/fixtures/: no_results.html  search_initial.html  search_s_card.html  search_updated.html
