[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-watch-bot"
version = "0.1.0"
description = "Watch eBay seller search results and send Telegram restock alerts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "playwright>=1.40",
  "python-dotenv>=1.0",
  "requests>=2.31",
]

[project.scripts]
ebay-watch-bot = "ebay_watch_bot.cli:main"

[tool.setuptools.packages.find]
include = ["ebay_watch_bot*"]
